--- a/grafana/grafana-datasource-config.yaml
+++ b/grafana/grafana-datasource-config.yaml
@@ -6,16 +6,25 @@ metadata:
 data:
   prometheus.yaml: |-
     {
-        "apiVersion": 1,
-        "datasources": [
-            {
-               "access":"proxy",
-                "editable": true,
-                "name": "prometheus",
-                "orgId": 1,
-                "type": "prometheus",
-                "url": "http://prometheus-service.monitoring.svc:8080",
-                "version": 1
-            }
-        ]
+      "apiVersion": 1,
+      "datasources": [
+        {
+          "access": "proxy",
+          "editable": true,
+          "name": "prometheus",
+          "orgId": 1,
+          "type": "prometheus",
+          "url": "http://prometheus-service.monitoring.svc:8080",
+          "version": 1
+        },
+        {
+          "access": "proxy",
+          "editable": true,
+          "name": "loki",
+          "orgId": 1,
+          "type": "loki",
+          "url": "http://loki.monitoring.svc:3100",
+          "version": 1
+        }
+      ]
     }
