--- a/loki/persistentvolume_loki.yaml
+++ b/loki/persistentvolume_loki.yaml
@@ -1,30 +1,29 @@
-kind: PersistentVolume
 apiVersion: v1
+kind: PersistentVolume
 metadata:
-  name: apps-logs
-  namespace: monitoring
+  name: apps-logs-pv
 spec:
-  storageClassName: manual
   capacity:
-    storage: 1Gi
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: manual
   hostPath:
-    path: "/vagrant/logs"
+    path: /vagrant/logs
 
 ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: apps-logs
+  name: apps-logs-pvc
   namespace: monitoring
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
-  volumeName: apps-logs
+      storage: 5Gi
+  storageClassName: manual
 
