--- a/loki/promtail.yaml
+++ b/loki/promtail.yaml
@@ -25,10 +25,10 @@ spec:
           resources: {}
           volumeMounts:
             - mountPath: /vagrant/logs
-              name: apps-logs
+              name: apps-logs-pv
       restartPolicy: Always
       volumes:
         - name: apps-logs
           persistentVolumeClaim:
-            claimName: apps-logs
+            claimName: apps-logs-pvc
 status: {}
