--- a/AlertManager/Deployment.yaml
+++ b/AlertManager/Deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alertmanager
+  namespace: monitoring
 spec:
   selector:
     matchLabels:
@@ -45,6 +46,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: alertmanager-config
+  namespace: monitoring
 data:
   config.yml: |-
     global:
@@ -70,6 +72,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager-service
+  namespace: monitoring
 spec:
   selector:
     app: alertmanager
